Slot Controller implementation